  ! When an icon is debugged as an image, the raw format of its images is always displayed as Icon. Though when
    an icon is opened from file or is debugged as icon, Bmp/Png format is displayed for non-compound view.
  ! When debugging a Graphics instance not showing all those properties anymore, which are obvious also from the
    regular debug window.
  + Supporting all possible PixelFormats
  - If an indexed bitmap was debugged, then changing a transparent palette entry did not always work properly.

+ KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
+ The DebuggerHelper class have been made public, which provides public access for some debugger visualizers.
- Serialization of a Metafile with WMF format failed in some cases.
- Debugging Bitmaps of rare PixelFormats failed, now all possible formats are supported.

+ KGySoft.Drawing.DebuggerVisualizers.Test.exe
==============================================
+ Providing tests for all possible PixelFormats (applies Bitmap, BitmapData, Graphics, Palette)
+ Bitmap/Metafile/Icon types can be debugged as Image or as their self type (affects replacing while debugging)
+ Also BitmapData and Graphics can be opened directly
- If an image was debugged directly, then after replacing the image and closing the debugger the tester was crashed.
- A Metafile with WMF format was not be able to be opened by the debugger


~~~~~~~~~
! v2.0.0:
~~~~~~~~~

! Assembly names:
=================
! Instead of many separate KGySoft.DebuggerVisualizers.VS<version>.dll files from now on there is one
  KGySoft.Drawing.DebuggerVisualizers.dll for each .NET frameworks.
! KGySoft.DebuggerVisualizers.Common.dll has been renamed to KGySoft.Drawing.ImagingTools.exe, which
  is an executable file now.

! KGySoft.Drawing.ImagingTools.exe
==================================
! As an executable file, it can be launched as a standalone application.
! In Windows XP icons will be converted to uncompressed ones.