@@ -16,7 +16,6 @@
 
 #region Usings
 
-using System;
 using System.Diagnostics;
 using System.Drawing;
 using System.Drawing.Imaging;
