@@ -19,7 +19,11 @@
     an icon is opened from file or is debugged as icon, Bmp/Png format is displayed for non-compound view.
   ! When debugging a Graphics instance not showing all those properties anymore, which are obvious also from the
     regular debug window.
+  ! Improving quality, when image is saved in a format that does not support current pixel format. Though this is
+    is an improvement the result might not be incompatible with earlier results.
   + Supporting all possible PixelFormats
+  + Always allowing to save in Icon format
+  + Saving as TIFF allows to save a multi-page image even for animations and icons if compound view is selected.
   - If an indexed bitmap was debugged, then changing a transparent palette entry did not always work properly.
 
 + KGySoft.Drawing.DebuggerVisualizers.dll
